--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+
 <html>
 
 <head>
@@ -26,10 +27,25 @@
 	<!-- fav icon -->
 	<link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
 </head>
-
+<div class="mobilelandscapeview" style="position:relative;">
+	<div class="landscape_view1">
+	Back to Viewing Mode
+	<img class="back_to_mode" src="{% static 'image/phone_rotate_black.png' %}">
+</div>
+</div>
 
 <body>
+
 	<!-- Modal -->
+	<div class="mobileportraitview">
+
+
+
+
+
+
+
+
 	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content sbscribe-bg">
@@ -333,7 +349,7 @@
 		</div>
 	</footer>
 	<!-- footer close here-->
-
+</div>
 
 	<!-- bootstrap js -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
