--- a/templates/home.html
+++ b/templates/home.html
@@ -321,7 +321,7 @@
 						<div class="play-btn-item uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 700; repeat: true">
 							<div class="playpause">
 								<div class="frst_img">
-								<img src="{% static 'image/play_ic.png' %}" id="play_button"  onclick="openFullscreen()">
+								<img src="{% static 'image/play button.png' %}" id="play_button"  onclick="openFullscreen()">
 								</div>
 								 <div class="bnnr_img desktop_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
