--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -26,6 +26,14 @@
 </head>
 
 <body class="vision-sections">
+	<div class="mobilelandscapeview" style="position:relative;">
+		<div class="landscape_view1">
+		Back to Viewing Mode
+		<img class="back_to_mode" src="{% static 'image/phone_rotate_black.png' %}">
+	</div>
+	</div>
+	
+<div class="mobileportraitview">
 
 	<!-- Modal -->
 	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -697,6 +705,7 @@
 			</div>
 		</div>
 	</footer>
+</div>
 	<!-- footer close here-->
 	<!-- bootstrap js -->
 
