--- a/templates/teams.html
+++ b/templates/teams.html
@@ -25,7 +25,14 @@
     <link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
 </head>
 <body>
+	<div class="mobilelandscapeview" style="position:relative;">
+		<div class="landscape_view1">
+		Back to Viewing Mode
+		<img class="back_to_mode" src="{% static 'image/phone_rotate_black.png' %}">
+	</div>
+	</div>
 	<!-- Modal -->
+	<div class="mobileportraitview">
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 	  <div class="modal-content sbscribe-bg">
@@ -263,6 +270,7 @@
 		</div>
 	</div>
 </footer>
+</div>
 <!-- footer close here-->
     <!-- bootstrap js -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
