--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -25,6 +25,14 @@
     <link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
 </head>
 <body>
+	<div class="mobilelandscapeview" style="position:relative;">
+		<div class="landscape_view1">
+		Back to Viewing Mode
+		<img class="back_to_mode" src="{% static 'image/phone_rotate_black.png' %}">
+	</div>
+	</div>
+
+	<div class="mobileportraitview">
 	<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
@@ -498,6 +506,8 @@
 		</div>
 	</div>
 </footer>
+</div>
+
 <!-- footer close here-->
 <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-up"></i></button>
     <!-- bootstrap js -->
