--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -33,7 +33,7 @@
 	</div>
 	</div>
 	
-<div class="mobileportraitview">
+{% comment %} <div class="mobileportraitview"> {% endcomment %}
 
 	<!-- Modal -->
 	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -705,7 +705,7 @@
 			</div>
 		</div>
 	</footer>
-</div>
+{% comment %} </div> {% endcomment %}
 	<!-- footer close here-->
 	<!-- bootstrap js -->
 
