remove title text

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 
 
 
-	<title>Wndr.Land</title>
+	<title>WNDR.com</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
 	<!-- <meta http-equiv="ScreenOrientation" content="autoRotate:disabled"> -->
