--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Wndr.Land</title>
+	<title>WNDR.com</title>
 
 	<!-- slick css -->
  <link rel="stylesheet" href="{% static 'css/slick.css' %}">
@@ -224,7 +224,7 @@
 					<p>02</p>
 				</div>
 				<p class="rdmp-phtw"><span>Phase 02</span></p>
-				<h2><span>WNDR.LAND | ORIGINS</span> ADDITIONAL GAMING EXPERIENCES SHOWCASE THE EXPANSION OF THE WNDR.LAND DIGITAL WORLD </h2>
+				<h2><span>WNDR.com | ORIGINS</span> ADDITIONAL GAMING EXPERIENCES SHOWCASE THE EXPANSION OF THE WNDR.LAND DIGITAL WORLD </h2>
 				<h2>STATUS <span><<<</span>IN DEVELOPMENT<span>>>></span></h2>
 				<div class="key-objectv-phasetw">
 					<h4>Key Objectivess </h4>
@@ -242,7 +242,7 @@
 					<p>04</p>
 				</div>
 				<p class="rdmp-phtw"><span>Phase 04</span></p>
-				<h2><span>WNDR.LAND </span>OPEN WORLD</h2> 
+				<h2><span>WNDR.com </span>OPEN WORLD</h2> 
 					<h2 class="bulid_out_txt">BUILD OUT & DEVELOPMENT OF VIRTUAL OPEN WORLD TECHNOLOGY THAT EXPANDS THE PLAYABLE UNIVERSE OF WNDR.
 					</h2>
 					<h2>STATUS<span><<<</span>PLANNING<span>>>></span></h2>
@@ -290,7 +290,7 @@
 					<p>03</p>
 				</div>
 				<p class="rdmp-phase"><span>Phase 03</span></p>
-				<h2><span>WNDR.LAND | EXPAND & ENHANCE</span></h2>
+				<h2><span>WNDR.com | EXPAND & ENHANCE</span></h2>
 				<div class="wndr-pltfrm">
 					<p class="pltfrm-wb">CREATION OF FURTHER EXPERIENCES EXPANDING THE WORLD OF WNDR.</p>
 					<h2 class="pling-txt">STATUS <span><<<</span>PLANNING<span>>>></span></h2>
