--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Wndr.Land</title>
+	<title>Wndr.com</title>
 
 	<!-- slick css -->
 	<link rel="stylesheet" href="{% static 'css/slick.css' %}">
