--- a/templates/splash.html
+++ b/templates/splash.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Wndr.Land</title>
+		<title>WNDR.com</title>
 	
 		<!-- slick css -->
 <!-- slick css -->
