--- a/templates/teams.html
+++ b/templates/teams.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Wndr.Land</title>
+	<title>WNDR.com</title>
 
 	<!-- slick css -->
  <link rel="stylesheet" href="{% static 'css/slick.css' %}">
