--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -25,15 +25,12 @@
 	<script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
 </head>
 
+<div class="mobileportraitview">
+
 <body class="vision-sections">
-	<div class="mobilelandscapeview" style="position:relative;">
-		<div class="landscape_view1">
-		Back to Viewing Mode
-		<img class="back_to_mode" src="{% static 'image/phone_rotate_black.png' %}">
-	</div>
-	</div>
+
 	
-{% comment %} <div class="mobileportraitview"> {% endcomment %}
+
 
 	<!-- Modal -->
 	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
